crates/tsuno-driver/tests/fixtures/snapshots/pass/supports_recursive_spec_enum.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS builds_recursive_spec_enum
  all assertions discharged
PASS main
  all assertions discharged

stderr:
