crates/tsuno-driver/tests/fixtures/snapshots/pass/supports_vec_of_mut_refs.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS supports_vec_of_mut_refs
  all assertions discharged
PASS main
  all assertions discharged

stderr:
