crates/tsuno-driver/tests/fixtures/snapshots/pass/tracks_mut_ref_final_value_in_contract.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS set_to_two
  all assertions discharged
PASS main
  all assertions discharged

stderr:
