crates/tsuno-driver/tests/fixtures/snapshots/pass/trusts_callee_contract.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED caller
  callee `callee` has invalid contract: //@ assume must be placed immediately before the statement
  src/main.rs:14:2: 14:2
UNSUPPORTED callee
  //@ assume must be placed immediately before the statement
  src/main.rs:14:2: 14:2
PASS main
  all assertions discharged

stderr:
